Serenity 3.6 - JDK 17